fixed broken css

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,9 +14,14 @@
     box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
-  padding: 50px;
+  /*padding: 50px;*/
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  height: 100%;
   background: url('https://lh6.googleusercontent.com/i4m6QmFqp49ajh2qRhHUU2gHtASrteQ-toMNON6i7zCf0xvxxEwi7yt23jziOWKsGrjIsvmW1xCqjL4=w1440-h699-rw');
   background-size: 100%;
   background-repeat: no-repeat;
@@ -25,7 +30,25 @@ body {
   margin-top: 0;
 }
 
-form {
+.nav {
+  background-color: orange-darken-4;
+}
+
+.nav-wrapper {
+  background-color: orange-darken-4;
+}
+
+.container{
+  background:rgba(222,222,222,.8);
+  position: relative;
+  overflow-y: scroll;
+  height: 100%;
+  /*padding-bottom:100px;*/
+  padding-top: 0;
+  margin-top: 0;
+}
+
+.classroom {
     background: #000;
     padding: 3px;
     position: fixed;
@@ -33,14 +56,14 @@ form {
     width: 100%;
 }
 
-form input {
+.rate {
     border: 0;
     padding: 10px;
     width: 90%;
     margin-right: .5%;
 }
 
-form button {
+.rating {
     width: 9%;
     background: rgb(130, 224, 255);
     border: none;
@@ -55,18 +78,6 @@ form button {
 
 #messages li {
     padding: 5px 10px;
-}
-
-.container{
-  background:rgba(222,222,222,.8);
-  position: relative;
-  overflow-y: scroll;
-  height: 100%;
-  border: 30px;
-  /*padding-bottom:100px;*/
-  padding-top: 0;
-  margin-top: 0;
-  height: 100%
 }
 
 #messages li:nth-child(odd) {
